load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])  # Apache License 2.0

go_library(
    name = "testhelpers",
importpath = "github.com/google/schedviz/testhelpers/testhelpers",

    srcs = ["testhelpers.go"],
    deps = [
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_google_go-cmp//cmp:go_default_library",
    ],
)
