load("@rules_cc//cc:defs.bzl", "cc_binary")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])  # Apache License 2.0

cc_binary(
    name = "trace",
    srcs = [
        "status.h",
        "trace.cc",
        "trace.h",
    ],
    copts = ["-std=c++17"],
    deps = [
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/time",
        "@com_googlesource_code_re2//:re2",
    ],
)
