load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])  # Apache License 2.0

cc_binary(
    name = "trace",
    srcs = [
        "status.h",
        "trace.cc",
        "trace.h",
    ],
    copts = ["-std=c++17"],
    deps = [
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/time",
        "@com_googlesource_code_re2//:re2",
    ],
)

go_library(
    name = "util",
importpath = "github.com/google/schedviz/util/util",

    srcs = ["log.go"],
    deps = [
        "@com_github_golang_glog//:go_default_library",
        "@com_github_golang_time//rate:go_default_library",
    ],
)
