load("@npm_bazel_typescript//:defs.bzl", "ts_library")
load("@npm_angular_bazel//:index.bzl", "ng_module")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])  # Apache License 2.0

ng_module(
    name = "heatmap",
    srcs = [
        "heatmap.ts",
        "heatmap_module.ts",
        "index.ts",
        "intervals_layer.ts",
        "metrics_overlay.ts",
        "preview_layer.ts",
        "timeline_zoom_brush.ts",
        "x_axis_layer.ts",
    ],
    assets = [
        "heatmap.css",
        "heatmap.ng.html",
        "metrics_overlay.css",
        "metrics_overlay.ng.html",
        "dialog_metrics_help.ng.html",
    ],
    deps = [
        "//client/app/heatmap/cpu_axes",
        "//client/app/models",
        "//client/app/services",
        "//client/app/util",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/material",
        "@npm//@angular/platform-browser",
        "@npm//@types/node",
        "@npm//d3",
        "@npm//rxjs",
    ],
)

ts_library(
    name = "heatmap_tests",
    testonly = True,
    srcs = [
        "heatmap_test.ts",
        "preview_layer_test.ts",
    ],
    deps = [
        ":heatmap",
        "//client/app/models",
        "//client/app/services",
        "//client/app/util",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser-dynamic",
        "@npm//@types/jasmine",
        "@npm//d3",
        "@npm//rxjs",
    ],
)
